change some color

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <style id='global-styles-inline-css' type='text/css'>
         body {
             --wp--preset--color--black: #000000;
-            --wp--preset--color--cyan-bluish-gray: #abb8c3; 
+            --wp--preset--color--cyan-bluish-gray: #abb8c3;
             --wp--preset--color--white: #ffffff;
             --wp--preset--color--pale-pink: #f78da7;
             --wp--preset--color--vivid-red: #cf2e2e;
@@ -404,16 +404,16 @@
 <body class="home page-template-default page page-id-1637 no-top-padding">
     <div class="header container-fluid no-fixed">
         <div class="header-inner">
-            <div class="left-btn">
+            <!-- <div class="left-btn">
                 <a class="menu-toggle gold-small-box" href="#">
                     <div class="center"></div>
                     <div class="before"></div>
                     <div class="after"></div>
                 </a>
-            </div>
-            <div class="right-btn">
+            </div> -->
+            <!-- <div class="right-btn">
                 <a href="#" class="book-now-btn btn">Contact <span class="br-xs"></span>US</a>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- <div id="menu-bar">
@@ -1530,44 +1530,33 @@
                             <li id="menu-item-1761"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1761"><a
                                     href="#">Treatment</a></li>
-                            <li id="menu-item-1689"
+                            <!-- <li id="menu-item-1689"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1689"><a
-                                    href="#">Olaplex</a></li>
+                                    href="#">Olaplex</a></li> -->
                             <li id="menu-item-1762"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1762"><a
                                     href="#">Hair Extensions</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-push-5 col-sm-2 col-xs-4 quart-col-pad-left menu-col col">
-                        <h5>Company</h5>
-                        <ul id="menu-company" class="footer-menu">
-                            <li id="menu-item-2614"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2614"><a
-                                    href="#">About</a></li>
-                            <li id="menu-item-2615"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2615"><a
-                                    href="#">Media</a></li>
-                            <li id="menu-item-2613"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2613"><a
-                                    href="#">Cutting &#038; Styling</a></li>
                             <li id="menu-item-2612"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2612"><a
                                     href="#">Colour Services</a></li>
-
+                                    <li id="menu-item-2613"
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2613"><a
+                                    href="#">Cutting &#038; Styling</a></li>
                         </ul>
                     </div>
+                    
                     <div class="col-sm-push-5 col-sm-2 col-xs-3 half-col-pad-left menu-col col">
                         <h5>Contact</h5>
                         <ul id="menu-contact" class="footer-menu">
                             <li id="menu-item-1697"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1697"><a
-                                    href="#">Customer Care</a></li>
+                                    href="#">esperanza.beauty.salon@hotmail.com</a></li>
                             <li id="menu-item-1696"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1696"><a
-                                    href="#">Recruitment</a></li>
+                                    href="#">400 40th St, Union City, NJ 07087, United States</a></li>
                             <li id="menu-item-1695"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1695"><a
-                                    href="#">Education</a></li>
+                                    href="#">(+120) 1552 9944</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-pull-7 col-sm-5 col-xs-12 half-col-pad-right col-share col">
@@ -1604,8 +1593,8 @@
                     </div>
                     <div class="col-xs-6 col2 col">
                         <p>
-                            <a href="#">Terms & Privacy</a><span class="separator"></span>
-                            <a href="#" target="_blank">Site by dash</a>
+                            <a href="#">Terms & Privacy</a>
+                            <!-- <a href="#" target="_blank">Site by dash</a> -->
                         </p>
                     </div>
                 </div>
